# app-xma-props-to-json-xrm

./: CMakeLists.txt  Makefile  README.md  xmaPropsTOjson.cpp  xmaPropsTOjson.h
